--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       </section>
 
       <section id="kontakti">
-        <h2>Forma per Kontakt</h2>
+        <h2>Forma për Kontakt</h2>
         <table>
           <tr>
             <td>
