--- a/index.html
+++ b/index.html
@@ -274,7 +274,12 @@
                   placeholder="Mesazhi"
                 ></textarea>
                 <br />
-                <input type="submit" id="submitBtn" style="cursor: pointer" />
+                <input
+                  type="submit"
+                  id="submitBtn"
+                  style="cursor: pointer"
+                  value="Dërgo"
+                />
               </form>
             </td>
             <td>
