Added the JS file + new feature(dark mode)

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link href="style.css" rel="stylesheet" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="lightMode">
+		<button type="button" class="darkModeBtn">Dark Mode</button>
     <div class="container">
       <header>
         <h1>Uebsite për Gjuhët Programuese sipas Përdorimit (UGJPP)</h1>
       </header>
-
       <nav>
         <ul>
           <li><a href="index.html">Ballina</a></li>
@@ -333,5 +333,6 @@
         </details>
       </footer>
     </div>
+	<script src="script.js"></script>
   </body>
 </html>
