--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet" />
     <title>Document</title>
   </head>
-  <body class="lightMode">
+  <body>
 		<button type="button" class="darkModeBtn">Dark Mode</button>
     <div class="container">
       <header>
