--- a/index.html
+++ b/index.html
@@ -81,62 +81,6 @@
                 height="100px"
               >
                 <g
-                  fill="none"
-                  fill-rule="evenodd"
-                  stroke="none"
-                  stroke-width="1"
-                  stroke-linecap="butt"
-                  stroke-linejoin="miter"
-                  stroke-miterlimit="10"
-                  stroke-dasharray=""
-                  stroke-dashoffset="0"
-                  font-family="none"
-                  font-weight="none"
-                  font-size="none"
-                  text-anchor="none"
-                  style="mix-blend-mode: normal"
-                >
-                  <g transform="scale(5.33333,5.33333)">
-                    <path
-                      d="M22.903,3.286c0.679,-0.381 1.515,-0.381 2.193,0c3.355,1.883 13.451,7.551 16.807,9.434c0.679,0.38 1.097,1.084 1.097,1.846c0,3.766 0,15.101 0,18.867c0,0.762 -0.418,1.466 -1.097,1.847c-3.355,1.883 -13.451,7.551 -16.807,9.434c-0.679,0.381 -1.515,0.381 -2.193,0c-3.355,-1.883 -13.451,-7.551 -16.807,-9.434c-0.678,-0.381 -1.096,-1.084 -1.096,-1.846c0,-3.766 0,-15.101 0,-18.867c0,-0.762 0.418,-1.466 1.097,-1.847c3.354,-1.883 13.452,-7.551 16.806,-9.434z"
-                      fill="#000000"
-                    ></path>
-                    <path
-                      d="M5.304,34.404c-0.266,-0.356 -0.304,-0.694 -0.304,-1.149c0,-3.744 0,-15.014 0,-18.759c0,-0.758 0.417,-1.458 1.094,-1.836c3.343,-1.872 13.405,-7.507 16.748,-9.38c0.677,-0.379 1.594,-0.371 2.271,0.008c3.343,1.872 13.371,7.459 16.714,9.331c0.27,0.152 0.476,0.335 0.66,0.576z"
-                      fill="#212427"
-                    ></path>
-                    <path
-                      d="M24,10c7.727,0 14,6.273 14,14c0,7.727 -6.273,14 -14,14c-7.727,0 -14,-6.273 -14,-14c0,-7.727 6.273,-14 14,-14zM24,17c3.863,0 7,3.136 7,7c0,3.863 -3.137,7 -7,7c-3.863,0 -7,-3.137 -7,-7c0,-3.864 3.136,-7 7,-7z"
-                      fill="#ffffff"
-                    ></path>
-                    <path
-                      d="M42.485,13.205c0.516,0.483 0.506,1.211 0.506,1.784c0,3.795 -0.032,14.589 0.009,18.384c0.004,0.396 -0.127,0.813 -0.323,1.127l-19.084,-10.5z"
-                      fill="#151719"
-                    ></path>
-                    <path
-                      d="M31,21h2v6h-2zM38,21h2v6h-2z"
-                      fill="#ffffff"
-                    ></path>
-                    <path
-                      d="M29,23h6v2h-6zM36,23h6v2h-6z"
-                      fill="#ffffff"
-                    ></path>
-                  </g>
-                </g>
-              </svg>
-              <p><b>Gjuha:</b> C++</p>
-              <p><b>Viti i Krijimit:</b> 1979</p>
-              <p><b>Niveli i Gjuhës:</b> I lartë</p>
-            </td>
-            <td class="soTd">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0,0,256,256"
-                width="100px"
-                height="100px"
-              >
-                <g
                   fill="#000000"
                   fill-rule="nonzero"
                   stroke="none"
@@ -168,62 +112,6 @@
         <table class="gaming">
           <th class="gamingTh" colspan="3">Krijimin e Video-Lojërave</th>
           <tr>
-            <td class="gamingTd">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0,0,256,256"
-                width="100px"
-                height="100px"
-              >
-                <g
-                  fill="none"
-                  fill-rule="evenodd"
-                  stroke="none"
-                  stroke-width="1"
-                  stroke-linecap="butt"
-                  stroke-linejoin="miter"
-                  stroke-miterlimit="10"
-                  stroke-dasharray=""
-                  stroke-dashoffset="0"
-                  font-family="none"
-                  font-weight="none"
-                  font-size="none"
-                  text-anchor="none"
-                  style="mix-blend-mode: normal"
-                >
-                  <g transform="scale(5.33333,5.33333)">
-                    <path
-                      d="M22.903,3.286c0.679,-0.381 1.515,-0.381 2.193,0c3.355,1.883 13.451,7.551 16.807,9.434c0.679,0.38 1.097,1.084 1.097,1.846c0,3.766 0,15.101 0,18.867c0,0.762 -0.418,1.466 -1.097,1.847c-3.355,1.883 -13.451,7.551 -16.807,9.434c-0.679,0.381 -1.515,0.381 -2.193,0c-3.355,-1.883 -13.451,-7.551 -16.807,-9.434c-0.678,-0.381 -1.096,-1.084 -1.096,-1.846c0,-3.766 0,-15.101 0,-18.867c0,-0.762 0.418,-1.466 1.097,-1.847c3.354,-1.883 13.452,-7.551 16.806,-9.434z"
-                      fill="#000000"
-                    ></path>
-                    <path
-                      d="M5.304,34.404c-0.266,-0.356 -0.304,-0.694 -0.304,-1.149c0,-3.744 0,-15.014 0,-18.759c0,-0.758 0.417,-1.458 1.094,-1.836c3.343,-1.872 13.405,-7.507 16.748,-9.38c0.677,-0.379 1.594,-0.371 2.271,0.008c3.343,1.872 13.371,7.459 16.714,9.331c0.27,0.152 0.476,0.335 0.66,0.576z"
-                      fill="#212427"
-                    ></path>
-                    <path
-                      d="M24,10c7.727,0 14,6.273 14,14c0,7.727 -6.273,14 -14,14c-7.727,0 -14,-6.273 -14,-14c0,-7.727 6.273,-14 14,-14zM24,17c3.863,0 7,3.136 7,7c0,3.863 -3.137,7 -7,7c-3.863,0 -7,-3.137 -7,-7c0,-3.864 3.136,-7 7,-7z"
-                      fill="#ffffff"
-                    ></path>
-                    <path
-                      d="M42.485,13.205c0.516,0.483 0.506,1.211 0.506,1.784c0,3.795 -0.032,14.589 0.009,18.384c0.004,0.396 -0.127,0.813 -0.323,1.127l-19.084,-10.5z"
-                      fill="#181a1c"
-                    ></path>
-                    <path
-                      d="M34,20h1v8h-1zM37,20h1v8h-1z"
-                      fill="#ffffff"
-                    ></path>
-                    <path
-                      d="M32,25h8v1h-8zM32,22h8v1h-8z"
-                      fill="#ffffff"
-                    ></path>
-                  </g>
-                </g>
-              </svg>
-              <p><b>Gjuha:</b> C#</p>
-              <p><b>Viti i Krijimit:</b> 2000</p>
-              <p><b>Niveli i Gjuhës:</b> I lartë</p>
-            </td>
             <td class="gamingTd">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -262,8 +150,8 @@
         <h2>Forma për Kontakt</h2>
         <table>
           <tr>
-            <td>
-              <form action="#">
+            <td style="width: 50%;">
+              <form action="#" >
                 <input type="text" placeholder="Emri" />
                 <br />
                 <input type="email" placeholder="Email" />
@@ -285,7 +173,7 @@
             <td>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23500.634496656818!2d21.556918367155873!3d42.58545095502769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1354e96f0bd40699%3A0x986565e6eb98b1bf!2sKamenica!5e0!3m2!1sen!2s!4v1713906723827!5m2!1sen!2s"
-                width="650"
+                width="100%"
                 height="450"
                 style="border: 0; margin: 0 auto"
                 allowfullscreen=""
