added the dark/light mode icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-		<button type="button" class="darkModeBtn">Dark Mode</button>
+		<button type="button" class="darkModeBtn"><img src="dark.png" alt="" class="image"></button>
     <div class="container">
       <header>
         <h1>Uebsite për Gjuhët Programuese sipas Përdorimit (UGJPP)</h1>
