--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 <body>
 	<div class="container">
-		<img src="Foto/dark.png" alt="" class="image" width="40px">
+
 		<header id="ballina">
 			<h1>Uebsite për Gjuhët Programuese sipas Përdorimit (UGJPP)</h1>
+			<abbr title="DarkMode/LightMode"><img src="Foto/dark.png" alt="" class="image"></abbr>
 		</header>
+
 		<nav>
 			<ul>
 				<li><a href="#ballina">Ballina</a></li>
@@ -93,8 +95,8 @@
 					<td>
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23500.634496656818!2d21.556918367155873!3d42.58545095502769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1354e96f0bd40699%3A0x986565e6eb98b1bf!2sKamenica!5e0!3m2!1sen!2s!4v1713906723827!5m2!1sen!2s"
-							width="100%" height="450" style="border: 0; margin: 0 auto" allowfullscreen=""
-							loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							width="100%" height="450" allowfullscreen="" loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"></iframe>
 					</td>
 				</tr>
 			</table>
