added a new reference

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 					<a target="_blank" href="https://icons8.com/icon/utx96pPa33XK/lua-language">Lua Language</a>
 					icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 					<br />
-					<a target="_blank" href="https://icons8.com/icon/mfkStOwP4EC0/c-programming">C Programming</a>
-					icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+					<a target="_blank" href="https://icons8.com/icon/40670/c-programming">C Programming</a> icon by <a
+						target="_blank" href="https://icons8.com">Icons8</a>
 					<br />
 					<a target="_blank" href="https://icons8.com/icon/haeAxVQEIg0F/rust-programming-language">Rust
 						Programming Language</a>
