--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<div class="container">
 
 		<header id="ballina">
+			<svg width="55" height="50" style="z-index: 2;">
+				<circle cx="12" cy="25" r="10" stroke="#F2613F" stroke-width="2" fill="#EFECEC" />
+				<text fill="black" font-size="5" font-family="Verdana" x="4" y="27">UGJPP</text>
+			</svg>
 			<h1>Uebsite për Gjuhët Programuese sipas Përdorimit (UGJPP)</h1>
 			<abbr title="DarkMode/LightMode"><img src="Foto/dark.png" alt="" class="image"></abbr>
 		</header>
