added videos, todo: audio & svg

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 	<div class="container">
 
 		<header id="ballina">
-			<svg width="55" height="50" style="z-index: 2;">
-				<circle cx="12" cy="25" r="10" stroke="#F2613F" stroke-width="2" fill="#EFECEC" />
-				<text fill="black" font-size="5" font-family="Verdana" x="4" y="27">UGJPP</text>
-			</svg>
 			<h1>Uebsite për Gjuhët Programuese sipas Përdorimit (UGJPP)</h1>
 			<abbr title="DarkMode/LightMode"><img src="Foto/dark.png" alt="" class="image"></abbr>
 		</header>
@@ -23,14 +19,23 @@
 		<nav>
 			<ul>
 				<li><a href="#ballina">Ballina</a></li>
-				<li><a href="#sistemetOperative">Gjuhët Programuese</a></li>
+				<li><a href="#gjuhetProgramuese">Gjuhët Programuese</a></li>
 				<li><a href="#kontakti">Kontakti</a></li>
 			</ul>
 		</nav>
 
-		<section id="sistemetOperative">
+		<section style="margin-top: 55px;">
+			<video width="100%" autoplay loop muted style="border-radius: 10px; box-shadow: #212427 0px 0px 7px">
+				<source src="Video/videoBallina.mp4" type="video/mp4">
+			</video>
+		</section>
+
+
+		<section id="gjuhetProgramuese">
 			<table class="so">
-				<th class="soTh" colspan="3">Krijimin e Sistemeve Operative</th>
+				<thead>
+					<th class="soTh" colspan="3">Krijimin e Sistemeve Operative</th>
+				</thead>
 				<tr>
 					<td class="soTd">
 						<div class="infoTd">
@@ -54,8 +59,22 @@
 					</td>
 				</tr>
 			</table>
+			<div style="display: flex; justify-content: center; margin-top: 10px;">
+				<iframe width="49%" height="370" src="https://www.youtube.com/embed/U3aXWizDbQ4?si=87auPJtzmsGTFtbA"
+					title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<iframe width="49%" height="370px" src="https://www.youtube.com/embed/5C_HPTJg5ek?si=6T3gVCxJiuf1q2mj"
+					title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+			</div>
+
 			<table class="gaming">
-				<th class="gamingTh" colspan="3">Krijimin e Video-Lojërave</th>
+				<thead>
+					<th class="gamingTh" colspan="3">Krijimin e Video-Lojërave</th>
+				</thead>
 				<tr>
 					<td class="soTd">
 						<div class="infoTd">
@@ -79,13 +98,26 @@
 					</td>
 				</tr>
 			</table>
+			<div style="display: flex; justify-content: center; margin-top: 10px;">
+				<iframe width="49%" height="370" src="https://www.youtube.com/embed/jUuqBZwwkQw?si=9G9aiBdEahC_L-Yt"
+					title="YouTube video player" frameborder="1"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<iframe width="49%" height="370px" src="https://www.youtube.com/embed/l9AzO1FMgM8?si=JNNmRzfyzeFtAuGc"
+					title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+			</div>
+
 		</section>
+
 
 		<section id="kontakti">
 			<h2>Forma për Kontakt</h2>
-			<table>
+			<table style="width: 100%;">
 				<tr>
-					<td style="width: 50%;">
+					<td style="width: 49%;">
 						<form action="#">
 							<input type="text" placeholder="Emri" />
 							<br />
@@ -96,7 +128,7 @@
 							<input type="submit" id="submitBtn" style="cursor: pointer" value="Dërgo" />
 						</form>
 					</td>
-					<td>
+					<td style="width: 49%;">
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23500.634496656818!2d21.556918367155873!3d42.58545095502769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1354e96f0bd40699%3A0x986565e6eb98b1bf!2sKamenica!5e0!3m2!1sen!2s!4v1713906723827!5m2!1sen!2s"
 							width="100%" height="450" allowfullscreen="" loading="lazy"
@@ -110,6 +142,8 @@
 			<details>
 				<summary>Referencat</summary>
 				<p>
+					<a target="_blank" href="https://www.youtube.com/@Fireship">Video</a>
+					<br>
 					<a target="_blank" href="https://icons8.com/icon/2572/java">Java</a>
 					icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 					<br />
