--- a/index.html
+++ b/index.html
@@ -38,77 +38,82 @@
 				</thead>
 				<tr>
 					<td class="soTd">
-						<div class="infoTd">
-							<img src="Foto/c.png" alt="">
-							<div>
-								<p><b>Gjuha:</b> C</p>
-								<p><b>Viti i Krijimit:</b> 1972</p>
-								<p><b>Niveli i Gjuhës:</b> I lartë</p>
-							</div>
+						<img src="Foto/c.png" alt="">
+						<div class="soText">
+							<p><b>Gjuha:</b> C</p>
+							<p><b>Viti i Krijimit:</b> 1972</p>
+							<p><b>Niveli i Gjuhës:</b> I lartë</p>
 						</div>
 					</td>
 					<td class="soTd">
-						<div class="infoTd">
-							<img src="Foto/rust.png" alt="">
-							<div>
-								<p><b>Gjuha:</b> Rust</p>
-								<p><b>Viti i Krijimit:</b> 2006</p>
-								<p><b>Niveli i Gjuhës:</b> I ulët</p>
-							</div>
+						<img src="Foto/rust.png" alt="">
+						<div class="soText">
+							<p><b>Gjuha:</b> Rust</p>
+							<p><b>Viti i Krijimit:</b> 2006</p>
+							<p><b>Niveli i Gjuhës:</b> I ulët</p>
 						</div>
 					</td>
 				</tr>
 			</table>
-			<div style="display: flex; justify-content: center; margin-top: 10px;">
-				<iframe width="49%" height="370" src="https://www.youtube.com/embed/U3aXWizDbQ4?si=87auPJtzmsGTFtbA"
-					title="YouTube video player" frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				<iframe width="49%" height="370px" src="https://www.youtube.com/embed/5C_HPTJg5ek?si=6T3gVCxJiuf1q2mj"
-					title="YouTube video player" frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-			</div>
-
+			<table style="width: 100%;">
+				<tr>
+					<td>
+						<iframe width="100%" height="370"
+							src="https://www.youtube.com/embed/U3aXWizDbQ4?si=87auPJtzmsGTFtbA"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					</td>
+					<td>
+						<iframe width="100%" height="370px"
+							src="https://www.youtube.com/embed/5C_HPTJg5ek?si=6T3gVCxJiuf1q2mj"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					</td>
+				</tr>
+			</table>
 			<table class="gaming">
 				<thead>
 					<th class="gamingTh" colspan="3">Krijimin e Video-Lojërave</th>
 				</thead>
 				<tr>
 					<td class="soTd">
-						<div class="infoTd">
-							<img src="Foto/lua.png" alt="">
-							<div>
-								<p><b>Gjuha:</b> Lua</p>
-								<p><b>Viti i Krijimit:</b> 1993</p>
-								<p><b>Niveli i Gjuhës:</b> I lartë</p>
-							</div>
+						<img src="Foto/lua.png" alt="">
+						<div class="soText">
+							<p><b>Gjuha:</b> Lua</p>
+							<p><b>Viti i Krijimit:</b> 1993</p>
+							<p><b>Niveli i Gjuhës:</b> I lartë</p>
 						</div>
 					</td>
 					<td class="soTd">
-						<div class="infoTd">
-							<img src="Foto/java.png" alt="">
-							<div>
-								<p><b>Gjuha:</b> Java</p>
-								<p><b>Viti i Krijimit:</b> 1995</p>
-								<p><b>Niveli i Gjuhës:</b> I lartë</p>
-							</div>
+						<img src="Foto/java.png" alt="">
+						<div class="soText">
+							<p><b>Gjuha:</b> Java</p>
+							<p><b>Viti i Krijimit:</b> 1995</p>
+							<p><b>Niveli i Gjuhës:</b> I lartë</p>
 						</div>
 					</td>
 				</tr>
 			</table>
-			<div style="display: flex; justify-content: center; margin-top: 10px;">
-				<iframe width="49%" height="370" src="https://www.youtube.com/embed/jUuqBZwwkQw?si=9G9aiBdEahC_L-Yt"
-					title="YouTube video player" frameborder="1"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				<iframe width="49%" height="370px" src="https://www.youtube.com/embed/l9AzO1FMgM8?si=JNNmRzfyzeFtAuGc"
-					title="YouTube video player" frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-			</div>
+			<table style="width: 100%;">
+				<tr>
+					<td>
+						<iframe width="100%" height="370"
+							src="https://www.youtube.com/embed/jUuqBZwwkQw?si=9G9aiBdEahC_L-Yt"
+							title="YouTube video player" frameborder="1"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					</td>
+					<td>
+						<iframe width="100%" height="370px"
+							src="https://www.youtube.com/embed/l9AzO1FMgM8?si=JNNmRzfyzeFtAuGc"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					</td>
+				</tr>
+			</table>
 
 		</section>
 
@@ -139,25 +144,11 @@
 		</section>
 
 		<footer>
-			<details>
-				<summary>Referencat</summary>
-				<p>
-					<a target="_blank" href="https://www.youtube.com/@Fireship">Video</a>
-					<br>
-					<a target="_blank" href="https://icons8.com/icon/2572/java">Java</a>
-					icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-					<br />
-					<a target="_blank" href="https://icons8.com/icon/utx96pPa33XK/lua-language">Lua Language</a>
-					icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-					<br />
-					<a target="_blank" href="https://icons8.com/icon/40670/c-programming">C Programming</a> icon by <a
-						target="_blank" href="https://icons8.com">Icons8</a>
-					<br />
-					<a target="_blank" href="https://icons8.com/icon/haeAxVQEIg0F/rust-programming-language">Rust
-						Programming Language</a>
-					icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-				</p>
-			</details>
+			<h3>Referencat:</h3>
+			<p><a href="https://www.youtube.com/watch?v=mAg8UyDt_sw&ab_channel=HeartSnappedGaming">Video (Ballina)</a>
+			<p><a href="https://www.youtube.com/@Fireship">Video (Embedded)</a></p>
+			</p>
+			<p><a href="https://icons8.com/icons">Foto</a></p>
 		</footer>
 	</div>
 	<script src="Scriptat/script.js"></script>
