removed box-shadow from video

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</nav>
 
 		<section style="margin-top: 55px;">
-			<video width="100%" autoplay loop muted style="border-radius: 10px; box-shadow: #212427 0px 0px 7px">
+			<video width="100%" autoplay loop muted style="border-radius: 10px;">
 				<source src="Video/videoBallina.mp4" type="video/mp4">
 			</video>
 		</section>
