--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 							referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</td>
 				</tr>
+				<tr>
+					<td colspan="2" style="text-align: center;">
+						<p style="font-size: clamp(12px, 1vw, 16px);">Ndëgjo diqka rreth C:</p>
+						<audio controls>
+							<source src="Audio/yt1s.com - Linus Torvalds Nothing better than C.mp3" type="audio/mpeg">
+						</audio>
+					</td>
+				</tr>
 
 			</table>
 			<table class="gaming">
@@ -111,6 +119,12 @@
 					</td>
 				</tr>
 
+				<td colspan="2" style="text-align: center;">
+					<p style="font-size: clamp(12px, 1vw, 16px);">Ndëgjo diqka rreth Lua:</p>
+					<audio controls>
+						<source src="Audio/yt1s.com - What is Lua Let me explain it to you.mp3" type="audio/mpeg">
+					</audio>
+				</td>
 			</table>
 
 		</section>
@@ -143,10 +157,13 @@
 
 		<footer>
 			<h3>Referencat:</h3>
-			<p><a href="https://icons8.com/icons">Foto</a></p>
-			<p><a href="https://www.youtube.com/watch?v=mAg8UyDt_sw&ab_channel=HeartSnappedGaming">Video (Ballina)</a>
-			<p><a href="https://www.youtube.com/@Fireship">Video (Embedded)</a></p>
-			</p>
+			<p><a href="https://icons8.com/icons" target="_blank">Foto</a></p>
+			<p><a href="https://youtu.be/CYvJPra7Ebk?si=D-kroQI88_KpRe00" target="_blank">Audio (C)</a></p>
+			<p><a href="https://www.youtube.com/shorts/M678POioy5Q" target="_blank">Audio (Lua)</a></p>
+			<p><a href="https://www.youtube.com/watch?v=mAg8UyDt_sw&ab_channel=HeartSnappedGaming" target="_blank">Video
+					(Ballina)
+				</a></p>
+			<p><a href="https://www.youtube.com/@Fireship" target="_blank">Video (Embedded)</a></p>
 		</footer>
 	</div>
 	<script src="Scriptat/script.js"></script>
