--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 	<div class="container">
 
 		<header id="ballina">
+		
 			<h1>Uebsite për Gjuhët Programuese sipas Përdorimit (UGJPP)</h1>
-			<abbr title="DarkMode/LightMode"><img src="Foto/dark.png" alt="" class="image"></abbr>
+			<svg height="80" width="80">
+				<circle cx="40" cy="40" r="35" fill="#F2613F" stroke="#EFECEC" stroke-width="4"/>
+                <text x="13" y="45" font-size="16" font-family="Helvetica" fill="#212427">UGJPP</text>
+            </svg>
+		
 		</header>
 
 		<nav>
@@ -24,7 +29,11 @@
 			</ul>
 		</nav>
 
-		<section style="margin-top: 55px;">
+		<section style="text-align: center">
+						<img src="Foto/dark.png" alt="" class="image">
+		</section>
+
+		<section>
 			<video width="100%" autoplay loop muted style="border-radius: 10px;">
 				<source src="Video/videoBallina.mp4" type="video/mp4">
 			</video>
@@ -73,6 +82,7 @@
 				<tr>
 					<td colspan="2" style="text-align: center;">
 						<p style="font-size: clamp(12px, 1vw, 16px);">Ndëgjo diqka rreth C:</p>
+						<br>
 						<audio controls>
 							<source src="Audio/yt1s.com - Linus Torvalds Nothing better than C.mp3" type="audio/mpeg">
 						</audio>
@@ -121,6 +131,7 @@
 
 				<td colspan="2" style="text-align: center;">
 					<p style="font-size: clamp(12px, 1vw, 16px);">Ndëgjo diqka rreth Lua:</p>
+					<br>
 					<audio controls>
 						<source src="Audio/yt1s.com - What is Lua Let me explain it to you.mp3" type="audio/mpeg">
 					</audio>
