--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
 	<div class="container">
 
 		<header id="ballina">
-		
 			<h1>Uebsite për Gjuhët Programuese sipas Përdorimit (UGJPP)</h1>
-			<svg height="80" width="80">
-				<circle cx="40" cy="40" r="35" fill="#F2613F" stroke="#EFECEC" stroke-width="4"/>
-                <text x="13" y="45" font-size="16" font-family="Helvetica" fill="#212427">UGJPP</text>
-            </svg>
-		
+			<img src="Foto/dark.png" alt="" class="image">
 		</header>
 
 		<nav>
@@ -30,7 +25,10 @@
 		</nav>
 
 		<section style="text-align: center">
-						<img src="Foto/dark.png" alt="" class="image">
+				<svg height="80" width="80">
+				    <circle cx="40" cy="40" r="25" fill="#F2613F" stroke="#EFECEC" stroke-width="4"/>
+                <text x="21" y="44" font-size="11" font-family="Helvetica" font-weight="bold" fill="#212427">UGJPP</text>
+            </svg>
 		</section>
 
 		<section>
