--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<header id="ballina">
 			<h1>Uebsite për Gjuhët Programuese sipas Përdorimit (UGJPP)</h1>
-			<svg height="80" width="80">
+			<svg width="80" height="80">
 				    <circle cx="40" cy="40" r="25" fill="#F2613F" stroke="#EFECEC" stroke-width="3"/>
                 <text x="21.5" y="44" font-size="11" font-family="Helvetica" font-weight="bold" fill="#212427">UGJPP</text>
             </svg>
