--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</tr>
 				<tr>
 					<td colspan="2" style="text-align: center;">
-						<p style="font-size: clamp(12px, 1vw, 16px);">Ndëgjo diqka rreth C:</p>
+						<p style="font-size: clamp(12px, 1vw, 16px);">Dëgjo diqka rreth C:</p>
 						<br>
 						<audio controls>
 							<source src="Audio/yt1s.com - Linus Torvalds Nothing better than C.mp3" type="audio/mpeg">
@@ -128,7 +128,7 @@
 				</tr>
 
 				<td colspan="2" style="text-align: center;">
-					<p style="font-size: clamp(12px, 1vw, 16px);">Ndëgjo diqka rreth Lua:</p>
+					<p style="font-size: clamp(12px, 1vw, 16px);">Dëgjo diqka rreth Lua:</p>
 					<br>
 					<audio controls>
 						<source src="Audio/yt1s.com - What is Lua Let me explain it to you.mp3" type="audio/mpeg">
