--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<tr>
 					<td style="width: 49%;">
 						<form action="#">
-							<input type="text" placeholder="Emri" />
+							<input type="text" placeholder="Subjekti" />
 							<br />
 							<input type="email" placeholder="Email" />
 							<br />
